cluster-1/backend/apis/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress
  namespace: api
  labels:
    component: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
  - "*"
  gateways:
  - api/istio-ingress
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: foo-service.api.svc.cluster.local
        port:
          number: 80
